--- a/src/templates/User_Adoption_Center/post/animals.html
+++ b/src/templates/User_Adoption_Center/post/animals.html
@@ -169,7 +169,7 @@
               data-animal_observation="{{animal.observation}}">
               <i class='bx bx-book-open'></i> Abrir
             </button>
-            <form action="/view/animals/generate_report" method="POST">
+            <form action="/view/animals/generate_report/id={{current_user.get_id()}}" method="POST">
               <input type="hidden" name="animal_id" value="{{ animal.id }}">
               <button class="btn btn-personalized mt-2" type="submit" data-bs-toggle="modal">
                 <i class="bx bxs-info-circle"></i>Descargar Reporte
