--- a/src/templates/Profile_Animal/profile_animal.html
+++ b/src/templates/Profile_Animal/profile_animal.html
@@ -57,6 +57,17 @@ Perfil {{prName}}
             </form>
         </div>
     </div>
+    <nav>
+        <div>
+            <h4><a href="#">Fotografías</a></h4>
+        </div>
+        <div>
+            <h4><a href="/view/profile={{animal.adoptioncenter_id}}/animal={{animal.id}}/comments">Comunidad</a></h4>
+        </div>
+    </nav>
+    {%block visual_content%}
+    {%endblock%}
+
 </section>
 
 {% endblock %}
