--- a/src/templates/auth/no_authorized.html
+++ b/src/templates/auth/no_authorized.html
@@ -24,7 +24,7 @@
       </div>
       <div class="container_user_register">
         <div class="container_user_type">
-          <a class="btn btn-personalized" href="/home/adoption_center">
+          <a class="btn btn-personalized" href="{{url_for('home_adoption_center.homeAdoptionCenter')}}">
             Volver al inicio
           </a>
         </div>
