--- a/src/templates/auth/register_user.html
+++ b/src/templates/auth/register_user.html
@@ -27,12 +27,12 @@
       </div>
       <div class="container_user_register">
         <div class="container_user_type">
-          <a class="btn btn-personalized" href="/register/adoption_center">
+          <a class="btn btn-personalized" href="{{url_for('register_adoption_center.registerAdoptionCenter')}}">
             Soy un centro de adopcion
           </a>
         </div>
         <div class="container_user_type">
-          <a class="btn btn-personalized" href="/register/natural_person">
+          <a class="btn btn-personalized" href="{{url_for('register_natural_person.registerNaturalPerson')}}">
             Soy una persona natural
           </a>
         </div>
