--- a/src/templates/lateral_base.html
+++ b/src/templates/lateral_base.html
@@ -36,60 +36,60 @@
           {% if current_user.is_authenticated %}
             {% if current_user.user_type_name == "UT-ADOPTION_CENTER"%}
             <li class="item">
-              <a href="/view/profile={{current_user.id}}/adoption_center/{{current_user.name}}"
+              <a href="{{url_for('view_profile_adoption_center.viewProfileAdoptionCenter',id = current_user.id, name = current_user.name)}}"
                 class="link flex">
                 <i class="bx bxs-user"></i>
                 <span>Perfil</span>
               </a>
             </li>
             <li class="item">
-              <a href="/home/adoption_center" class="link flex">
+              <a href="{{url_for('home_adoption_center.homeAdoptionCenter')}}" class="link flex">
                 <i class="bx bxs-home-heart"></i>
                 <span>Inicio</span>
               </a>
             </li>
             <li class="item">
-              <a href="/view/animals" class="link flex">
+              <a href="{{url_for('animals_adoption_center.animalsAdoptionCenter')}}" class="link flex">
                 <i class="bx bxs-dog"></i>
                 <span>Mis animales</span>
               </a>
             </li>
             <li class="item">
-              <a href="/publication_adoption_center"
+              <a href="{{url_for('publication_adoption_center.publicationAdoptionCenter')}}"
                 class="link flex">
                 <i class="bx bxs-cloud-upload"></i>
                 <span>Publicar</span>
               </a>
             </li>
             <li class="item">
-              <a href="/logout" class="link flex">
+              <a href="{{url_for('logout_user.logoutUser')}}" class="link flex">
                 <i class="bx bxs-log-out"></i>
                 <span>Cerrar Sesión</span>
               </a>
             </li>
             {% elif current_user.user_type_name == "UT-NATURAL_PERSON"%}
             <li class="item">
-              <a href="/view/profile={{current_user.id}}/natural_person/{{current_user.name}}"
+              <a href="{{url_for('view_profile_natural_person.viewProfileNaturalPerson',id = current_user.id, name = current_user.name)}}"
                 class="link flex">
                 <i class="bx bxs-user"></i>
                 <span>Perfil</span>
               </a>
             </li>
             <li class="item">
-              <a href="/home/adoption_center" class="link flex">
+              <a href="{{url_for('home_adoption_center.homeAdoptionCenter')}}" class="link flex">
                 <i class="bx bxs-home-heart"></i>
                 <span>Inicio</span>
               </a>
             </li>
             <li class="item">
-              <a href="/publication_natural_person"
+              <a href="{{url_for('publication_natural_person.publicationNaturalPerson')}}"
                 class="link flex">
                 <i class="bx bxs-cloud-upload"></i>
                 <span>Publicar</span>
               </a>
             </li>
             <li class="item">
-              <a href="/logout" class="link flex">
+              <a href="{{url_for('logout_user.logoutUser')}}" class="link flex">
                 <i class="bx bxs-log-out"></i>
                 <span>Cerrar Sesión</span>
               </a>
@@ -97,27 +97,21 @@
             {%endif%}
           {% else %}
           <li class="item">
-            <a href="/login" class="link flex">
+            <a href="{{url_for('login_user.loginUser')}}" class="link flex">
               <i class="bx bx-user"></i>
               <span>Inicia Sesión</span>
             </a>
           </li>
           <li class="">
-            <a href="/register" class="link flex">
+            <a href="{{url_for('register_user.registerUser')}}" class="link flex">
               <i class="bx bxs-pencil"></i>
               <span>Registrate</span>
             </a>
           </li>
           <li class="item">
-            <a href="/home/adoption_center" class="link flex">
+            <a href="{{url_for('home_adoption_center.homeAdoptionCenter')}}" class="link flex">
               <i class="bx bxs-home-heart"></i>
               <span>Inicio</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex" data-bs-toggle="modal" data-bs-target="#ModalRequest">
-              <i class="bx bxs-cloud-upload"></i>
-              <span>Publicar</span>
             </a>
           </li>
           {% endif %}
