--- a/src/templates/publication.html
+++ b/src/templates/publication.html
@@ -14,7 +14,7 @@ Publicar
 <!-- unitest, nosetest -->
 {% block body %}
 <div class="contenedor">
-  <form class="contNuevaPub" action="#" method="POST">
+  <form class="contNuevaPub" method="POST">
     <div class="encabezadoNuevaPub">
       <div class="tituloNuevaPub">
         <label for="validationCustom01" class="form-label">Nueva publicacion</label>
