--- a/src/templates/User_Adoption_Center/modal.html
+++ b/src/templates/User_Adoption_Center/modal.html
@@ -14,78 +14,6 @@
   </div>
 </div>
 
-<!--Segundo Modal Formulario subir animal-->
-<div class="modal-xl modal" id="Modal2" tabindex="-1" aria-labelledby="exampleModalCenterTitle" style="display: none;" aria-modal="true" role="dialog">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="modaltitle2">Registrar Animal</h1>
-      </div>
-      <form action='mis_animales' method="POST">
-        <div class="modal-body input-group">
-          <div class="container">
-            <div class="row">
-              <div class="col col-md-auto">
-                <input type="hidden" name="form_id" value="add_animal">
-                <input type="hidden" id="hiddenField" name="hiddenField"><!--URL IMAGEN-->
-                <input type="hidden" id="IdHidden" name="IdHidden" value="{{current_user.id}}">
-                <img id="preview" src="" alt="" style="width: 400px; height: 400px;">
-              </div>
-              <div class="col col-md-6">
-                <div class="input-group mb-3">
-                  <input type="text" class="form-control newAnimal" placeholder="Nombre" aria-label="Nombre" name="animal_name">
-                </div>
-                <div class="input-group mb-3">
-                  <input type="number" class="form-control newAnimal" placeholder="Edad" aria-label="Edad" name="animal_age">
-                </div>
-                <div class="input-group mb-3">
-                  <select class="form-select newAnimal" aria-label="Especie" id="especieSelect" onchange="checkEspecie()" name="animal_specie">
-                    <option selected disabled>Especie</option>
-                    {%for specie in species %}
-                    <option value={{specie.id}}>{{specie.name}}</option>
-                    {% endfor %}
-                  </select>
-                </div>
-                <div class="input-group mb-3">
-                  <select class="form-select newAnimal" aria-label="Especie" id="especieSelect" onchange="checkEspecie()" name="animal_breed">
-                    <option selected disabled>Raza</option>
-                    {%for breed in breeds %}
-                    <option value={{breed.id}}>{{breed.name}}</option>
-                    {% endfor %}
-                  </select>
-                </div>
-                <div class="input-group mb-3">
-                  <select class="form-select newAnimal" aria-label="Especie" id="sexoSelect" name="sexo">
-                    <option selected disabled>Sexo</option>
-                    <option value="Macho">Macho</option>
-                    <option value="Hembra">Hembra</option>
-                  </select>
-                </div>
-                <div class="input-group mb-3">
-                  <select class="form-select newAnimal" aria-label="Tamaño" id="tamanioSelect" name="tamanio">
-                    <option selected disabled>Tamaño</option>
-                    <option value="Pequeño">Pequeño (0-20cm)</option>
-                    <option value="Mediano">Mediano (21-50cm)</option>
-                    <option value="Grande">Grande (51-80cm)</option>
-                    <option value="Gigante">Gigante (>81cm)</option>
-                  </select>
-                </div>
-                <div class="input-group mb-3">
-                  <input type="number" class="form-control newAnimal" placeholder="Peso (kg)" aria-label="Peso (kg)" name="animal_weight">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary-personalized" data-bs-dismiss="modal">Cancelar</button>
-          <button type="submit" class="btn btn-personalized-save">Guardar</button>
-        </div>  
-      </form>  
-    </div>
-  </div>
-</div>
-
 <!--Tercer Modal Editar Animales-->
 <div class="modal-xl modal" id="Modal3" tabindex="-1" aria-labelledby="exampleModalCenterTitle" style="display: none;" aria-modal="true" role="dialog">
   <div class="modal-dialog modal-dialog-centered">
@@ -94,15 +22,16 @@
         <h1 class="modal-title fs-5" id="modaltitle3">INFORMACION RÁPIDA</h1>
         <!-- <input class="modal-title fs-5" id="modaltitle3" name="nombre"> -->
       </div>
-      <form action='/view/animals' method="POST">
-        <div class="modal-body input-group">
-          <div class="container">
+      <form action="{{url_for('animals_adoption_center.animalsAdoptionCenter')}}" method="POST">
+        <div class="container-modal modal-body input-group">
+          <div class="content-modal" >
             <div class="row">
               <div class="col col-md-auto" style="display: grid; grid-template-columns: min-content;">
                 <input type="hidden" name="form_id" value="edit_animal"><!--IDENTIFICADOR FORM-->
                 <input type="hidden" id="idAnimal" name="animalid">
                 <img id="animal_photo" src="" alt="" style="width: 400px; height: 400px;">
-                <a href="/editAnimal/" id="ref_edit_animal">Editar información completa</a>
+                <a href="#" id="ref_edit_animal">Editar información completa</a>
+                
               </div>
               <div class="col col-md-6">
                 <div class="input-group mb-3">
