--- a/src/templates/User_Adoption_Center/post/edit_animal.html
+++ b/src/templates/User_Adoption_Center/post/edit_animal.html
@@ -14,7 +14,7 @@ Editar animal
 
 {%if animal%}
 <div class="container">
-  <form class="animal_form" action="/editAnimal/{{animal.id}}" method="POST">
+  <form class="animal_form" action="{{url_for('animals_adoption_center.editAnimalAdoptionCenter', animal_id = animal.id)}}" method="POST">
     <!-- Informacion basica del animal -->
     <div class="container_basic_information">
       <div class="container_animal_photo">
