--- a/src/templates/auth/login_user.html
+++ b/src/templates/auth/login_user.html
@@ -19,7 +19,7 @@
 
 <body>
   <div class="content">
-    <form class="form-signin" action="/login" method="POST">
+    <form class="form-signin" action="{{url_for('login_user.loginUser')}}" method="POST">
       <div class="form-msg">
         <h1>ADOGCION</h1>
       </div>
@@ -55,11 +55,11 @@
     </form>
     <div class="reg_option">
       <h3>¿No tienes cuenta?
-        <a href="/register" class="href-personalized">
+        <a href="{{url_for('register_user.registerUser')}}" class="href-personalized">
           <strong>Registrate aqui</strong>
       </h3>
       </a>
-      <h3>O puedes volver al  <a href="/home/adoption_center" class="href-personalized"><strong>inicio</strong></a></h3>
+      <h3>O puedes volver al  <a href="{{url_for('home_adoption_center.homeAdoptionCenter')}}" class="href-personalized"><strong>inicio</strong></a></h3>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
