--- a/src/templates/auth/register_natural_person.html
+++ b/src/templates/auth/register_natural_person.html
@@ -51,7 +51,7 @@
     {% endwith%}
 
     <div class="cont_form">
-      <form action="/register/natural_person" method="POST" id="formRegister" class="formRegister">
+      <form action="{{url_for('register_natural_person.registerNaturalPerson')}}" method="POST" id="formRegister" class="formRegister">
         <!--PAGINA 1-->
         <div class="pagina pag1">
           <div class="titulo">Informacion personal</div>
@@ -188,11 +188,11 @@
   </div>
   <div class="log_option">
     <h3>¿Ya tienes cuenta?
-      <a href="/login" class="href-personalized">
+      <a href="{{url_for('login_user.loginUser')}}" class="href-personalized">
         <strong>Inicia sesion aqui</strong>
     </h3>
     </a>
-    <h3>O puedes volver al<a href="/home/adoption_center" class="href-personalized"><strong> inicio</strong></a></h3>
+    <h3>O puedes volver al<a href="{{url_for('home_adoption_center.homeAdoptionCenter')}}" class="href-personalized"><strong> inicio</strong></a></h3>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
