--- a/src/templates/Profile_Animal/animal_breed_comment.html
+++ b/src/templates/Profile_Animal/animal_breed_comment.html
@@ -1,8 +1,6 @@
 {% extends 'Profile_Animal/profile_animal.html' %}
 
 {%block visual_content%}
-
-<h4>Aki van a ir los comentarios del animal</h4>
 {%if current_user.is_authenticated%}
 <div class="container-add-comment">
   <div class="add-new-comment">
@@ -22,20 +20,24 @@
 {%endif%}
 
 <div class="container-animal-comments">
-  <div class="comment-animal-breed-publication">
-    <div class="comment-owner-photo">
-      <img src="https://static.wikia.nocookie.net/c9dde1fd-8d96-4288-97ea-6dca45a39891/scale-to-width/755" alt="">
-    </div>
-    <div class="container-name-description">
-      <div class="comment-owner-name">
-        <h4>Tengo ganas de kgar</h4>
-      </div>
-      <div class="comment-description">
-        <p>Penes grandes y sabrosos</p>
-      </div>
+  {%if user_comments%}
+    {%for user_comment in user_comments%}
+      <div class="comment-animal-breed-publication">
+        <div class="comment-owner-photo">
+          <img src="{{user_comment.owner_photo}}" alt="">
+        </div>
+        <div class="container-name-description">
+          <div class="comment-owner-name">
+            <h4>{{user_comment.owner_name}}</h4>
+          </div>
+          <div class="comment-description">
+            <p>{{user_comment.description}}</p>
+          </div>
 
-    </div>
-  </div>
+        </div>
+      </div>
+    {%endfor%}
+  {%endif%}
 </div>
 
 {%endblock%}
